examples/test/testpolicy9263.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9263
  namespace: namespace141
spec:
  podSelector:
    matchLabels:
      key3: value37
      key20: value23
      key23: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value44
          key34: value34
          key19: value2
      podSelector:
        matchLabels:
          key43: value7
          key10: value5
          key20: value32
